--- a/src/Componets/BottomHome.css
+++ b/src/Componets/BottomHome.css
@@ -108,3 +108,28 @@
   align-content: center;
   align-items: center;
 }
+@media only screen and (max-width:390px){
+  .bottomimg {
+    display: none;
+  }
+
+  .BottomEl {
+    margin-top: 122px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    align-content: center;
+}
+.bottomcard {
+  box-shadow: 1px 7px 18px 6px rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    /* margin-left: 30px; */
+    /* margin-top: 30px; */
+    margin: -79px 16px 22px 15px;
+}
+ 
+}
