--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@media only screen and (max-width:390px){
+
+  body{
+    margin: 0;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  }
+}
